[package]
name = "embedded-exfat"
version = "0.2.4"
edition = "2021"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
repository = "https://github.com/qiuchengxuan/exfat"
keywords = ["fat", "exfat", "filesystem", "no_std", "async"]
categories = ["filesystem"]
license = "MIT"
description = "ExFAT filesystem library with async support, mainly focusing on embedded system"

[dependencies]
async-std = { version = "1.12", optional = true }
async-trait = "0.1"
bitfield = "0.13"
chrono = { version = "0.4", optional = true, default-features = false }
deasync = "0.1"
derive_more = "0.99"
displaydoc = { version = "0.2", default-features = false }
heapless = "0.7"
hex-literal = "0.3"
log = "0.4"
memoffset = "0.8"
spin = "0.9"

[features]
async = []
async-std = ["async", "dep:async-std"]
std = ["displaydoc/std", "chrono/std", "chrono/clock"]
sync = []
default = ["std", "precise-allocation-counter"]
extern-datetime-now = []
log-max-level-off = ["log/max_level_off", "log/release_max_level_off"]
limit-filename-size = []
max-filename-size-30 = ["limit-filename-size"]
precise-allocation-counter = []

[lib]
name = "exfat"
doctest = false
