[package]
name = "embedded-exfat"
version = "0.3.3"
edition = "2024"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
repository = "https://github.com/qiuchengxuan/exfat"
keywords = ["fat", "exfat", "filesystem", "no_std", "async"]
categories = ["filesystem"]
license = "MIT"
description = "ExFAT filesystem library with async support, mainly focusing on embedded system"

[dependencies]
async-trait = "0.1"
bitfield = "0.19"
chrono = { version = "0.4", optional = true, default-features = false }
deasync = "0.1"
derive_more = { version = "2.0", features = ["display", "from", "into"], default-features = false }
displaydoc = { version = "0.2", default-features = false }
heapless = "0.9"
hex-literal = "1.0"
log = { version = "0.4", optional = true }
memoffset = "0.9"
smol = { version = "2.0", optional = true }
spin = "0.10"
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.47", optional = true, features = ["fs", "io-std", "io-util", "rt"] }

[features]
async = []
std = ["chrono/std", "chrono/clock", "thiserror/std", "derive_more/std", "displaydoc/std"]
sync = []
default = ["std"]
extern-datetime-now = []
logging = ["dep:log"]
limit-filename-size = []
max-filename-size-30 = ["limit-filename-size"]
tokio = ["dep:tokio"]
smol = ["dep:smol"]

[lib]
name = "exfat"
doctest = false
