[package]
name = "exfat-utils"
version = "0.1.0"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2021"
repository = "https://github.com/qiuchengxuan/exfat"

[dependencies]
async-embedded-sdmmc = { version = "0.1", features = ["linux-spi"] }
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
embedded-exfat = { path = "..", features = ["chrono", "extern-datetime-now"] }
embedded-hal = "0.2"
env_logger = "0.10"
log = "0.4"
mbr-nostd = "0.1"
pretty-hex = "0.2"
spidev = "0.5"

[[bin]]
name = "exfat"
path = "src/main.rs"
test = false
doc = false
