[package]
name = "exfat-utils"
version = "0.1.0"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2021"
repository = "https://github.com/qiuchengxuan/exfat"

[dependencies]
async-embedded-sdmmc = { version = "0.2", features = ["linux-spi"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
embedded-exfat = { path = "..", features = ["chrono", "extern-datetime-now"] }
embedded-hal = "1.0"
env_logger = "0.11"
log = "0.4"
mbr-nostd = "0.1"
pretty-hex = "0.4"
spidev = "0.7"

[[bin]]
name = "exfat"
path = "src/main.rs"
test = false
doc = false
